# Aska

./: .gitignore  AGENTS.md  README.md  git.ignore  pyproject.toml
.continue/rules/: 01-aska-project.md  01-autonomy.md  02-aska-project.md  03-python.md  04-documentation.md
Documentação/MVP/: Project_Atlas_Arquitetura_MVP.txt
apps/cli/: __main__.py  app.py  command_parser.py  commands.py  loading.py  parser.py
apps/cli/commands/: __init__.py  exit.py  memory.py
apps/cli/handlers/: __init__.py  memory.py  natural_file.py  natural_memory.py
capabilities/: __init__.py
capabilities/filesystem/: __init__.py  lister.py  reader.py
docs/: README.md
docs/architecture/: memory.md  overview.md
docs/development/: guide.md
docs/product/: vision.md
docs/project/: decisions.md  roadmap.md
tests/: cli_support.py  test_cli.py  test_cli_app.py  test_cli_conversation.py  test_cli_file_read.py  test_cli_memory_commands.py  test_cli_parser.py  test_command_parser.py  test_conversation.py  test_file_lister.py  test_local_memory_repository.py  test_memory.py  test_memory_service.py  test_natural_file.py  test_natural_memory.py  test_natural_memory_handler.py  test_ollama_provider.py  test_text_file_reader.py
