[project]
name = "aska"
version = "0.1.0"
description = "A personal, local-first AI companion."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
aska = "apps.cli.app:main"

[tool.setuptools.packages.find]
include = ["apps*"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]